fixed creative computing page overflow and added some text content

--- a/_creative_computing_page.scss
+++ b/_creative_computing_page.scss
@@ -1,12 +1,4 @@
 #creative-computing {
-	#music-player {
-		width: 600px;
-		height: 600px;
-		transform: scale(0.5);
-		border: none;
-		overflow: hidden;
-	}
-
 	#me-puntinism {
 		width: 500px;
 		height: 500px;
@@ -19,13 +11,32 @@
 		display: grid;
 		place-content: center;
 		margin-top: -100px;
+		overflow: hidden;
+	}
+
+	#music-player-subsection {
+		overflow: hidden;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+
+		#music-player {
+			width: 600px;
+			height: 600px;
+			transform: scale(0.5);
+			border: none;
+			overflow: hidden;
+		}
 	}
 }
 
 @media screen and (min-width: 768px) {
 	#creative-computing {
-		#music-player {
-			transform: scale(1) !important;
+		#music-player-subsection {
+			#music-player {
+				margin: 2rem 0;
+				transform: scale(1) !important;
+			}
 		}
 		#me-puntinism {
 			transform: scale(1);
